# user-idle

./: .gitignore  .markdownlint.jsonc  Cargo.toml  LICENSE.md  README.md  clippy.toml  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  performance_regression.md
.github/actions/install-linux-dependencies/: action.yml
.github/workflows/: ci.yml  dependencies.yml  weekly.yml  welcome.yml
src/: dbus_impl.rs  error.rs  lib.rs  macos_impl.rs  windows_impl.rs  x11_impl.rs
