[package]
name = "user-idle-time"
version = "0.6.0"
edition = "2024"
description = "Get a user's idle time."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/BenjaminBrienen/user-idle-time"
repository = "https://github.com/BenjaminBrienen/user-idle-time"
readme = "README.md"
keywords = ["idle", "user", "afk"]
rust-version = "1.85.1"

[badges]
circle-ci = { repository = "BenjaminBrienen/user-idle-time", branch = "main" }

[package.metadata.docs.rs]
all-features = false

[features]
default = ["x11"]

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xss"], optional = true }
dbus = { version = "0.9", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.48.0", features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "macos")'.dependencies]
IOKit-sys = "0.1.5"
mach = "0.3.2"
CoreFoundation-sys = "0.1.4"
cstr = "0.2.11"
