[package]
name = "user-idle-time"
version = "0.6.0"
edition = "2024"
description = "Get a user's idle time."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/BenjaminBrienen/user-idle-time"
repository = "https://github.com/BenjaminBrienen/user-idle-time"
readme = "README.md"
keywords = ["idle", "user", "afk"]
rust-version = "1.85.1"

[badges]
circle-ci = { repository = "BenjaminBrienen/user-idle-time", branch = "main" }

[package.metadata.docs.rs]
all-features = false

[features]
default = ["x11"]

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21.0", features = ["xlib", "xss"], optional = true }
dbus = { version = "0.9.7", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = [
  "Win32_Foundation",
  "Win32_System_SystemInformation",
  "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-sys = { version = "0.2.0", features=["CoreFoundation", "IOKit"] }
mach2 = "0.4.2"
cstr = "0.2.12"

[lints.rust]
warnings = { level = "warn", priority = -2 }
deprecated-safe = { level = "deny", priority = -1 }
future-incompatible = { level = "deny", priority = -1 }
keyword-idents = { level = "deny", priority = -1 }
let-underscore = { level = "deny", priority = -1 }
nonstandard-style = { level = "deny", priority = -1 }
refining-impl-trait = { level = "deny", priority = -1 }
rust-2018-compatibility = { level = "deny", priority = -1 }
rust-2018-idioms = { level = "deny", priority = -1 }
rust-2021-compatibility = { level = "deny", priority = -1 }
rust-2024-compatibility = { level = "deny", priority = -1 }
# TODO still prototyping
unused = { level = "allow", priority = 1 }

[lints.clippy]
cargo = { level = "warn", priority = -2 }
complexity = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -2 }
perf = { level = "warn", priority = -2 }
restriction = { level = "warn", priority = -2 }
style = { level = "warn", priority = -2 }
suspicious = { level = "warn", priority = -2 }

exhaustive_structs = "allow"               # wgsl-analyzer has no stability commitment
exhaustive_enums = "allow"                 # wgsl-analyzer has no stability commitment
single_call_fn = "allow"                   # good for organization
implicit_return = "allow"                  # unidiomatic
question_mark_used = "allow"               # unidiomatic
shadow_reuse = "allow"                     # often useful
pub_use = "allow"                          # often useful
std_instead_of_alloc = "allow"             # no no_std support
std_instead_of_core = "allow"              # no no_std support
cargo_common_metadata = "allow"            # not important
multiple_crate_versions = "allow"          # not under this crate's control
blanket_clippy_restriction_lints = "allow" # makes it easier to keep up to date with new lints
pub_with_shorthand = "allow"               # style preference
absolute_paths = "allow"                   # often hurts readability
items_after_statements = "allow"           # incorrect
shadow_unrelated = "allow"                 # do not care
missing_trait_methods = "allow"            # antipattern
float_arithmetic = "allow"                 # is fine
separated_literal_suffix = "allow"         # style preference
self_named_module_files = "allow"          # style preference
semicolon_outside_block = "allow"          # style preference
else_if_without_else = "allow"             # conflicting with redundant_else

# TODOs
missing_docs_in_private_items = "allow"
arbitrary_source_item_ordering = "allow"
field_scoped_visibility_modifiers = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
arithmetic_side_effects = "allow"
indexing_slicing = "allow"
unwrap_used = "allow"
unwrap_in_result = "allow"
undocumented_unsafe_blocks = "allow"
multiple_unsafe_ops_per_block = "allow"
pattern_type_mismatch = "allow"
panic_in_result_fn = "allow"
panic = "allow"
missing_errors_doc = "allow"
missing_assert_message = "allow"
unnecessary_wraps = "allow"
cast_precision_loss = "allow"
multiple_inherent_impl = "allow"
iter_over_hash_type = "allow"
expect_used = "allow"
string_slice = "allow"
cast_possible_truncation = "allow"
default_numeric_fallback = "allow"
redundant_pub_crate = "allow"
